--- a/baitapp5.html
+++ b/baitapp5.html
@@ -1,13 +1,11 @@
-<h2>Bai 5</h2>
-    <h3 id="top">Example Cafe Menu</h3>
-    <a href="#ST">  Starters</a> | <a href="#main">Main Course </a> | <a href="#Dess"> Desserts</a>
+
     <!DOCTYPE html>
 <html lang="en"xmlns="http://www.t5.org/2001/xhtml">
 <head>
 <meta charset="UTF-8"/>
 <title >bai5</title>
 </head>
-<body bgcolor="grey">
+<body >
     <h3 id="ex">Example Cafe Menu</h3>
     <a href="#ST">  Starters</a> | <a href="#mc">Main Course </a> | <a href="#De"> Desserts</a>
     <h2 id="ST"> Starters </h2>
