--- a/bai7.html
+++ b/bai7.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -9,7 +9,7 @@
 <body>
     <div style="border:1;margin:0 20%;width:60%; ">
         <p>
-            <img src="..//hinh/matcuoi.jpg" width="55" />
+            <img src="..//hinh/matcuoi.jpg" alt="matcuoi" width="55" />
             A smile is formed primarily by flexing the muscles at the sides of the mouth. Some smiles include a contraction of the muscles at the corner of the eyes, an action known as a Duchenne smile. Among humans, a smile expresses pleasure, sociability, happiness, joy or amusement. It is distinct from a similar but usually involuntary expression of anxiety known as a grimace. Although cross-cultural studies have shown that smiling is a means of communication throughout the world,[1] there are large differences among different cultures, religions and societies, with some using smiles to convey confusion or embarrassment.
         </p>
         <hr />
